--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy222--of-dra.-marcela-brasil---medical-luxury",
+  "name": "copy-of-copy-of-copy44-of-dra.-marcela-brasil---medical-luxury",
   "private": true,
   "version": "0.0.0",
   "type": "module",
